Fix menu button layout spacing behavior

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -20,7 +20,8 @@
 }
 
 .logo,
-#menu {
+#menu,
+.site-nav {
     display: flex;
     margin: auto var(--gap);
 }
@@ -81,8 +82,7 @@ body:not(.dark) #sun {
 }
 
 .site-nav {
-    float: right;
-    line-height: 54px;
+    line-height: calc(var(--header-height) - 2px);
 }
 
 .site-nav .nav-trigger {
@@ -105,6 +105,7 @@ body:not(.dark) #sun {
 
 @media screen and (max-width: 600px) {
     .site-nav {
+        display: block;
         position: absolute;
         top: 9px;
         right: 15px;
